--- a/src/index.scss
+++ b/src/index.scss
@@ -16,7 +16,25 @@ h1{
   line-height: 66px;
 }
 
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  li{
+    padding: 0;
+  }
+}
+
+a{
+  text-decoration: none;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.container {
+  @include container-padding;
 }
