--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,33 @@
+@import '../../customize.scss';
+
 .header{
-    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    //align-items: baseline;
+        &-title {
+            margin: 0;
+            font-family: $font-basic;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 30px;
+            line-height: 35px;
+            color: $green;
+        }
+        
+        .geo-wrapper{
+            display: flex;
+            align-items: center;
+        }
+        .geo-img{
+            width: 15px;
+            margin-right: 7px;
+        }
+        .geo-text{
+            font-family: $font-basic;
+            font-style: normal;
+            font-weight: normal;
+            font-size: 14px;
+            line-height: 16px;
+            color: $dark-grey;
+        }
 }
