--- a/src/components/sideMenu/sideMenu.scss
+++ b/src/components/sideMenu/sideMenu.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: black;
+    background-color: #151B1F;
     box-sizing: border-box;
     .burger-button{
         display: flex;
@@ -40,7 +40,11 @@
         
     }
 
-    .eng-button{
+    .lang-button{
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         background-color: transparent;
         font-family: $font-basic;
         font-style: normal;
@@ -48,18 +52,24 @@
         font-size: 13px;
         line-height: 15px;
         color: $green;
-        border: solid 1px transparent;
-        border-radius: 50%;
-        width: 48px;
-        height: 48px;
-        box-sizing: border-box;
+        border: none;
         transition: border-color .2s, color .1s;
-        &:hover{
-            border: 1px solid white;
-            box-sizing: border-box;
-        }
-        &:active{
-            color: white;
-        }
+        box-sizing: border-box;
+            &>div{
+                position: absolute;
+                width:48px;
+                height: 48px;
+                border: 1px solid white;
+                border-radius: 50%;
+                opacity: 0;
+                transition: opacity .2s;
+            }
+            &:hover > div{
+                opacity: 1;
+            }
+            &:active{
+                color: white;
+            }
     }
 }
+
