--- a/src/components/mainSection/mainSection.scss
+++ b/src/components/mainSection/mainSection.scss
@@ -1,4 +1,35 @@
+@import '../../customize.scss';
+
 .content-wrapper{
-    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
     box-sizing: border-box;
+
+}
+
+.main-title{
+    display: flex;
+    flex-direction: column;
+    font-family: $font-basic;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 70px;
+    line-height: 66px;
+    margin-top: 0;
+    margin-bottom: 15px;
+    color: #121212;
+
+}
+
+.main-page-description{
+    font-family: $font-basic;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 26px;
+    line-height: 30px;
+    margin: 15px 0;
+}
+
+.button-wrapper{
+    margin-top: 40px;
 }
