--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -1,4 +1,129 @@
+@import '../../media_mixin.scss';
+@import "../../customize.scss";
+
 .slider{
+    display: flex;
+    justify-content: center;
+    position: relative;
     flex: 1;
+    height: 100%;
+    background-color: #151B1F;
+    box-sizing: border-box;
+    @include desktop-min{
+        flex: .8;
+        padding-left: 64px;
+        padding-right: 64px;
+    }
+    @include tablet{
+        display: none;
+    }
+    @include phone{
+        display: none;
+    }
+    &-button-wrapper{
+        position: relative;
+        width: 100%;
+    }
+    &-button{
+        position: absolute;
+        z-index: 50;
+        top: 0;
+        width: 64px;
+        height: 100%;
+        border: none;
+        border-radius: 0;
+        background-color: transparent;
+        @include desktop-min{
+            max-width: 32px;
+        }
+        &:hover{
+            background: #0ec2624d;
+        }
+        &:active{
+            background: #0ec26260;
+        }
+    }
+    &-breadcrumbs-list{
+        display: flex;
+        position: absolute;
+        bottom: 32px;
+
+        z-index: 50;
+        &-item{
+            display: block;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            margin: 0 4px;
+            background-color:#EEEEEE;
+        }
+        &-item_active{
+            background-color: $green;
+        }
+    }
+    .prev-slide{
+        left: 0;
+    }
+    .next-slide{
+        right: 0;
+    }
+    .slide{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        padding-left: 64px;
+        padding-right: 64px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        box-sizing: border-box;
+        transition: opacity .5s;
+        opacity: 1;
+            &-content{
+                min-width: 0;
+                max-width: 495px;
+                @include desktop-min{
+                    max-width: 282px;
+                }
+            }
+            &-title{
+                font-style: normal;
+                font-weight: 500;
+                font-size: 32px;
+                line-height: 37px;
+                color: #FFFFFF;
+                margin: 0;
+            }
+
+            &-text{
+
+                font-style: normal;
+                font-weight: 300;
+                font-size: 22px;
+                line-height: 100%;
+                color: #EEEEEE;
+                margin-top: 8px;
+                margin-bottom: 32px;
+            }
+            &-button{
+                padding: 11px 30px;
+                min-width: 0;
+                border-radius: 4px;
+            }
+    }
+    
+}
+
+.hidden-slide{
+    position: absolute;
+    opacity: 0;
+    //right: -200%;
     box-sizing: border-box;
 }
+
+
