--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,25 +3,36 @@
 .header{
     display: flex;
     justify-content: space-between;
-    //align-items: baseline;
-        &-title {
-            margin: 0;
-            font-weight: bold;
-            font-size: 30px;
-            line-height: 35px;
+    @include phone{
+        flex-direction: column;
+        align-items: end;
+    }
+    
+//align-items: baseline;
+    &-title {
+        margin: 0;
+        font-weight: bold;
+        font-size: 30px;
+        line-height: 35px;
+        @include phone {
+            margin-bottom: 9px;
         }
+    }
+    
+    .geo-wrapper{
+        display: flex;
+        align-items: center;
         
-        .geo-wrapper{
-            display: flex;
-            align-items: center;
-        }
-        .geo-img{
-            width: 15px;
-            margin-right: 7px;
-        }
-        .geo-text{
-            font-weight: normal;
-            font-size: 14px;
-            line-height: 16px;
-        }
+    }
+    .geo-img{
+        width: 15px;
+        margin-right: 7px;
+    }
+    .geo-text{
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 16px;
+    }
 }
+
+        
