--- a/src/components/mainSection/mainSection.scss
+++ b/src/components/mainSection/mainSection.scss
@@ -4,6 +4,9 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    @include phone {
+        //overflow: hidden;
+    }
 
 }
 
@@ -18,6 +21,10 @@
     margin-top: 0;
     margin-bottom: 15px;
     color: #121212;
+    @include phone {
+        font-size: 32px;
+        line-height: 36px;
+    }
 
 }
 
@@ -28,8 +35,34 @@
     font-size: 26px;
     line-height: 30px;
     margin: 15px 0;
+    @include phone {
+        font-size: 18px;
+        line-height: 21px;
+    }
 }
 
 .button-wrapper{
     margin-top: 40px;
+    @include phone {
+        position: relative;
+        width: 100vw;
+        height: 30px;
+        margin: 0 -16px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        
+        box-sizing: border-box;
+    }
+    button{
+        @include phone{
+            margin-top: 0 -16px;
+            position: absolute;
+            left: 16px;
+            top: 0;
+            width: 100%;
+            margin: 0 -16px;
+            border-radius: 0;
+            
+        }
+    }
 }
