--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -4,8 +4,9 @@
     display: flex;
     justify-content: space-between;
     @include phone{
-        flex-direction: column;
-        align-items: end;
+        flex-wrap: wrap;
+        flex-direction: row-reverse;
+        
     }
     
 //align-items: baseline;
