--- a/src/components/mainSection/mainSection.scss
+++ b/src/components/mainSection/mainSection.scss
@@ -4,6 +4,10 @@
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
+    @include tablet {
+        overflow: auto;
+
+    }
     @include phone {
         //overflow: hidden;
     }
@@ -43,6 +47,8 @@
 
 .button-wrapper{
     margin-top: 40px;
+    margin-bottom: 40px;
+    height: 30px;
     @include phone {
         position: relative;
         width: 100vw;
