--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -3,6 +3,7 @@
 .header{
     display: flex;
     justify-content: space-between;
+    width: 100%;
     @include phone{
         flex-wrap: wrap;
         flex-direction: row-reverse;
