--- a/src/components/common/footer/footer.scss
+++ b/src/components/common/footer/footer.scss
@@ -1,4 +1,4 @@
-@import '../../customize.scss';
+@import '../../../constants/customize.scss';
 .footer{
     display: flex;
     justify-content: space-between;
