--- a/src/components/common/header/header.scss
+++ b/src/components/common/header/header.scss
@@ -1,4 +1,4 @@
-@import '../../customize.scss';
+@import '../../../constants/customize.scss';
 
 .header{
     display: flex;
@@ -16,7 +16,7 @@
         margin: 0;
         font-weight: bold;
         font-size: 30px;
-        line-height: 35px;
+        line-height: 30px;
         @include phone {
             margin-bottom: 9px;
         }
@@ -34,7 +34,7 @@
     .geo-text{
         font-weight: normal;
         font-size: 14px;
-        line-height: 16px;
+        line-height: 30px;
     }
 }
 
