--- a/src/components/common/slider/slider.scss
+++ b/src/components/common/slider/slider.scss
@@ -55,12 +55,12 @@
             width: 8px;
             height: 8px;
             border-radius: 50%;
-            //margin: 0 4px;
+            margin:0 4px;
             background-color:#EEEEEE;
             z-index: 10;
             box-sizing: border-box;
         }
-        &-item:hover{
+        &-item:hover {
             @include pointer;
         }
         &-item_active{
