--- a/src/components/ui/burgerButton/burgerButton.scss
+++ b/src/components/ui/burgerButton/burgerButton.scss
@@ -2,37 +2,45 @@
 
 
 .burger-button{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
+    
     width: 24px;
     height: 24px;
     padding: 0;
     border: none;
     background-color: transparent;
     box-sizing: border-box;
+    &:hover *{
+        @include pointer;
+    }
+    
     @include phone{
         width: 19px;
         height: 19px;
     }
-    &:hover>div{
-        box-shadow: 0px 0px 3px .5px #FFFFFF;
+    @include tablet{
+        width: 31px;
     }
-    &:active>div{
-        width: 20px;
-        height: 1px;
-        
-    }
+    
+    
 
     &>div{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
         width: 100%;
-        height: 3px;
-        background-color: white;
-        border-radius: 3px;
-        transition: width .1s, height .1s, box-shadow .1s;
-        @include phone {
-            background-color: #121212;
+        height: 100%;
+        
+        div{
+            height: 3px;
+            width: 100%;
+            background-color: white;
+            border-radius: 3px;
+            transition: width .1s, height .1s, box-shadow .1s;
+            @include phone {
+                background-color: #121212;
+            }
+
         }
     }
     
