--- a/src/components/ui/button/button.module.scss
+++ b/src/components/ui/button/button.module.scss
@@ -1,22 +1,47 @@
+@import '../../../constants/customize.scss';
+
+
 .customButton{
+    position: relative;
     display: block;
     min-width: 250px;
     padding: 11px;
-    background: linear-gradient(90deg, #0EC261 2.61%, #039F67 112.6%);
-    background-blend-mode: darken;
+    
     border: none;
     border-radius: 8px;
+    background-color: transparent;
+    text-align: center;
+    transition: filter .2s;
+    z-index: 2;
+    overflow: hidden;
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
     line-height: 21px;
     text-align: center;
+
     color: #FFFFFF;
-    transition: filter .2s;
-        &:hover{
-            filter: brightness(90%);
-        }
-        &:active{
-            filter: brightness(80%);
-        }
+
+
+    .bg{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: linear-gradient(90deg, #0EC261 2.61%, #039F67 112.6%);
+        background-blend-mode: darken;
+        z-index: -1;
+    }
+    &:hover, &:hover *{
+        @include pointer;
+    }
+    &:hover{
+        filter: brightness(90%);
+    }
+    &:active{
+        filter: brightness(80%);
+    }
+          
 }
+
