imports order fix

--- a/src/components/common/App/App.module.scss
+++ b/src/components/common/App/App.module.scss
@@ -1,5 +1,5 @@
 
-.page-container {
+.pageContainer {
     position: relative;
     display: flex;
     width: 100%;
@@ -9,7 +9,7 @@
     
 };
 
-.page-content {
+.pageContent {
     //width: 100%;
     display: flex;
     flex-direction: column;
