--- a/src/components/common/footer/footer.scss
+++ b/src/components/common/footer/footer.scss
@@ -28,6 +28,7 @@
         }
         span:last-child{
             color: black;
+            @include pointer;
             @include phone {
                 display: block;
                 color: $green;
