--- a/src/components/common/mainSection/mainSection.module.scss
+++ b/src/components/common/mainSection/mainSection.module.scss
@@ -1,6 +1,6 @@
 @import '../../../constants/customize.scss';
 
-.content-wrapper{
+.contentWrapper{
     display: flex;
     flex-direction: column;
     box-sizing: border-box;
@@ -14,7 +14,7 @@
 
 }
 
-.main-title{
+.mainTitle{
     display: flex;
     flex-direction: column;
     font-family: $font-basic;
@@ -32,7 +32,7 @@
 
 }
 
-.main-page-description{
+.mainPageDescription{
     font-family: $font-basic;
     font-style: normal;
     font-weight: 300;
@@ -45,7 +45,7 @@
     }
 }
 
-.button-wrapper{
+.buttonWrapper{
     margin-top: 40px;
     margin-bottom: 40px;
     height: 30px;
