mainPage component create

--- a/src/components/common/slider/slider.scss
+++ b/src/components/common/slider/slider.scss
@@ -37,7 +37,11 @@
             max-width: 32px;
         }
         &:hover{
+            @include pointer;
             background: #0ec2624d;
+        }
+        &:hover *{
+            @include pointer;
         }
         &:active{
             background: #0ec26260;
