--- a/src/components/common/mainSection/mainSection.module.scss
+++ b/src/components/common/mainSection/mainSection.module.scss
@@ -61,11 +61,10 @@
     }
     button{
         @include phone{
-            margin-top: 0 -16px;
             position: absolute;
             left: 16px;
             top: 0;
-            width: 100%;
+            width: 100vw;
             margin: 0 -16px;
             border-radius: 0;
             
