--- a/src/components/common/header/header.scss
+++ b/src/components/common/header/header.scss
@@ -5,9 +5,9 @@
     justify-content: space-between;
     @include phone{
         flex-wrap: wrap;
-        flex-direction: row-reverse;
-        align-self: flex-end;
-        max-width: 250px;
+        flex-direction: column;
+        align-items: flex-end;
+        //max-width: 250px;
         
     }
     
