--- a/src/pages/mainPage/mainPage.module.scss
+++ b/src/pages/mainPage/mainPage.module.scss
@@ -1,11 +1,13 @@
+@import "../../constants/customize.scss";
+
 
 .pageContainer {
     position: relative;
     display: flex;
     width: 100%;
     height: 100vh;
+    flex: 1;
     box-sizing: border-box;
-
     
 };
 
@@ -16,9 +18,37 @@
     justify-content: space-between;
     flex: 1;
     box-sizing: border-box;
+    overflow: auto;
+    @include phone {
+        justify-content: flex-start;
+    }
+
+};
+
+.buttonWrapper{
+    @include container-padding;
+    padding-top: 0;
+    padding-bottom: 0;
+    .button{
+        @include phone{
+            width: 100vw;
+            border-radius: 0;
+            margin-top: 16px;
+        }
+    }
+};
+
+
+.footerWrapper{
+    @include phone{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+    }
+}
+
 
   
 
 
 
-}
